fix: keep AWOS parser compatible with older Android versions